  your code.

- Fixed the displayed output of `Regex` terms to deduplicate repeated backslashes,
  for easier reading in debugging, printing, and railroad diagrams.

- Fixed (or at least reduced) elusive bug when generating railroad diagrams,
  where some diagram elements were just empty blocks. Fix submitted by RoDuth,
  thanks a ton!

- Added optional `flatten` Boolean argument to `ParseResults.as_list()`, to
  return the parsed values in a flattened list.

- Added `indent` and `base_1` arguments to `pyparsing.testing.with_line_numbers`. When
  using `with_line_numbers` inside a parse action, set `base_1`=False, since the
  reported `loc` value is 0-based. `indent` can be a leading string (typically of
  spaces or tabs) to indent the numbered string passed to `with_line_numbers`.
  Added while working on #557, reported by Bernd Wechner.

- Added query syntax to `mongodb_query_expression.py` with better support for
  array fields ("contains", "contains all", "contains any", and "contains none");
  and "like" and "not like" operators to support SQL "%" wildcard matching and "=~"
  operator to support regex matching. Also:
  - added support for dates and datetimes as query values
  - added support for `a[0]` style array referencing

- Added `lox_parser.py` example, a parser for the Lox language used as a tutorial in
  Robert Nystrom's "Crafting Interpreters" (http://craftinginterpreters.com/).
  With helpful corrections from RoDuth.

- Added `complex_chemical_formulas.py` example, to add parsing capability for
  formulas such as "3(C₆H₅OH)₂".


Version 3.1.4 - August, 2024
----------------------------
- Fixed a regression introduced in pyparsing 3.1.3, addition of a type annotation that
  referenced `re.Pattern`. Since this type was introduced in Python 3.7, using this type
  definition broke Python 3.6 installs of pyparsing 3.1.3. PR submitted by Felix Fontein,
  nice work!


Version 3.1.3 - August, 2024
----------------------------